# recipehub

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
nginx/conf.d/: default.conf
recipehub/: api_permissions.py  asgi.py  celery.py  conftest.py  context_processors.py  factories.py  redis.py  settings.py  urls.py  wsgi.py
recipehub/apps/recipes/: admin.py  apps.py  decorators.py  forms.py  models.py  recipe_builder.py  urls.py  utils.py  views.py
recipehub/apps/recipes/api/: pagination.py  serializers.py  views.py
recipehub/apps/recipes/migrations/: 0001_initial.py  0002_category_alter_recipe_ingredients_recipe_category.py  0002_initial.py  0003_alter_recipe_category.py  0003_alter_recipe_ingredients_alter_recipe_servings.py  0004_remove_recipe_approved_recipe_moderation_status.py  0005_alter_recipe_options_recipe_updated_at.py  0006_alter_recipe_ingredients.py  0007_alter_category_slug.py
recipehub/apps/recipes/tests/: factories.py
recipehub/apps/reviews/: admin.py  apps.py  models.py  urls.py  views.py
recipehub/apps/reviews/api/: serializers.py  views.py
recipehub/apps/reviews/migrations/: 0001_initial.py  0002_comment.py  (+3 more)
recipehub/apps/users/: admin.py  allauth_signals.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
static/css/: styles.css
static/js/: delete_from_favorites.js  favorites.js  stars.js
templates/: base.html
templates/account/: email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  profile_edit.html  signup.html  verification_sent.html
templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.txt
(+53 files in other folders)
