[project]
name = "recipehub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-cleanup>=9.0.0",
    "django-jazzmin>=3.0.1",
    "django-widget-tweaks>=1.5.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipython"
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
]
