[project]
name = "recipehub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.1",
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-cleanup>=9.0.0",
    "django-jazzmin>=3.0.1",
    "django-redis>=6.0.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.1",
    "fakeredis>=2.33.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "python-decouple>=3.8",
    "redis>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipython",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "factory-boy",
    "faker",
    "flower>=2.0.1",
    "freezegun",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
]
